package com.directi.training.isp.exercise.solution;

public interface ISensingDoor {
    public void proximityCallback();
}
