package com.directi.training.isp.exercise.solution;

public interface ITimedDoor {
    public void timeOutCallback();
}
